# im-salvo-backend

./: .gitignore  Cargo.toml  Cargo.toml.salvo  LICENSE  README.md  Rocket.toml  config.toml  docker-compose.yml  migration-plan.md  salvo-example.rs
.github/workflows/: ci.yml
auth-macro/: Cargo.toml
auth-macro/src/: lib.rs
chatbot/: Cargo.toml
chatbot/src/: lib.rs  utils.rs
im-codegen/: Cargo.toml
im-codegen/src/: connection.rs  lib.rs
im-codegen/src/utils/: convert.rs
im-codegen/src/visitor/: sql.rs
im-common/: Cargo.toml
im-common/src/: jwt.rs  lib.rs  redis.rs
im-common/src/config/: db_config.rs  mod.rs  redis_config.rs
im-common/src/utils/: cache.rs  docker.rs  mod.rs
im-server/src/: main.rs
im-server/src/controller/: auth.rs  captcha.rs
im-server/src/domain/: db.rs
im-server/src/hoops/: mod.rs
im-server/src/mapper/: user.rs
im-server/src/middleware/: jwt.rs
im-server/src/models/: conversation.rs  mod.rs  msg.rs  resp.rs  user.rs
im-server/src/routers/: auth.rs  chat.rs  mod.rs  user.rs
im-server/src/test/: auth.rs  chat.rs  lock.rs  mod.rs
permit-micro/: Cargo.toml
permit-micro/src/: lib.rs
script/: init_db.sql  init_user_table.sql
sql-macro/: Cargo.toml
sql-macro/src/: lib.rs
src/: auth.rs  error.rs  main.rs  main.rs.salvo
src/common/: mod.rs
src/common/utils/: config.rs  password.rs
src/controller/: auth.rs  chat.rs  demo.rs  mod.rs
src/domain/: chat.rs  mod.rs  req.rs  resp.rs  user.rs
src/framework/: chat.rs  jwt.rs  mod.rs  rbatis.rs  redis.rs  swagger.rs  websocket.rs
src/framework/rocket/: catcher.rs  mod.rs  resp.rs
src/mapper/: user.rs
src/test/: auth.rs  chat.rs  demo.rs  mod.rs
web-codegen/: Cargo.toml
web-codegen/src/: connection.rs  lib.rs  route.rs  sql.rs
web-codegen/src/utils/: convert.rs  mod.rs
web-codegen/src/visitor/: mod.rs  route.rs  sql.rs
web-common/: Cargo.toml  Cargo.toml.salvo
web-common/src/: config.rs  jwt.rs  jwt.rs.salvo  lib.rs  rbatis.rs  rbatis.rs.salvo  redis.rs  websocket.rs
web-common/src/core/: catcher.rs  catcher.rs.salvo  config.rs  mod.rs  resp.rs  resp.rs.salvo
web-common/src/core/utils/: password.rs
web-common/src/redis/: lock.rs  mod.rs  mod.rs.salvo
web-common/src/utils/: mod.rs  password.rs
web-proxy/: Cargo.toml  Config.toml
web-proxy/public/: index.html
web-proxy/src/: main.rs
web-proxy/src/handlers/: mod.rs  proxy.rs  static_file.rs
web-server/: Cargo.toml  Cargo.toml.salvo
web-server/src/: lib.rs  lib.rs.salvo
web-server/src/controller/: auth.rs  auth.rs.salvo  captcha.rs  chat.rs  demo.rs  mod.rs  mod.rs.salvo
web-server/src/domain/: chat.rs  db.rs  mod.rs  user.rs  user.rs.salvo
web-server/src/framework/: swagger.rs  swagger.rs.salvo
web-server/src/middleware/: jwt.rs  mod.rs  rbatis.rs  redis.rs
web-server/src/test/: auth.rs  lock.rs  mod.rs
