[package]
name = "learn-rocket"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "web-server",
    #     "web-codegen",
    "web-common",
]

resolver = "2"

[workspace.dependencies]
# 项目内部依赖
# web-codegen = { path = "web-codegen" }
web-common = { path = "web-common" }

# 异步模型
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "signal"] }

# web框架
salvo = { version = "0.79", features = ["anyhow", "jwt-auth", "oapi", "sse", "cors", "affix-state"] }

# 数据库
redis = { version = "0.32", features = ["tokio-comp"] }
deadpool-redis = { version = "0.21", features = ["serde", "rt_tokio_1"] }
redis-macros = "0.5"

rbs = "4.6"
rbatis = "4.6"
rbdc-pg = { version = "4.6", default-features = false, features = [
    "tls-native-tls",
] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

md5 = "0.7"
derive-new = "0.7"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
# qrcode = "0.14"

[dependencies]
web-server = { path = "web-server" }

anyhow = { workspace = true }
salvo = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
