[package]
name = "im-salvo-backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["im-codegen", "im-common"]

resolver = "2"

[workspace.dependencies]
# 项目内部依赖
im-codegen = { path = "im-codegen" }
im-common = { path = "im-common" }

# 异步模型
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "signal"] }

# web框架
salvo = { version = "0.80", features = [
    "anyhow",
    "jwt-auth",
    "oapi",
    "sse",
    "cors",
    "affix-state",
    "test",
    "compression",
    "serve-static",
    # "quinn"
] }

# 数据库
redis = { version = "0.32", features = ["tokio-comp"] }
deadpool-redis = { version = "0.22", features = ["serde", "rt_tokio_1"] }
redis-macros = "0.5"

rbs = "4.6"
rbatis = "4.6"
rbdc-pg = { version = "4.6", default-features = false, features = [
    "tls-native-tls",
] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

derive-new = "0.7"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "std",
    "fmt",
    "env-filter",
    "tracing-log",
    "time",
    "local-time",
    "json",
] }
# qrcode = "0.14"

[dependencies]
im-codegen = { workspace = true }
im-common = { workspace = true }
# openchat_bot = { git = "https://github.com/nosnakeob/rust-openchat-bot.git" }

tokio = { workspace = true }

salvo = { workspace = true }

redis = { workspace = true }
deadpool-redis = { workspace = true }
redis-macros = { workspace = true }

rbs = { workspace = true }
rbatis = { workspace = true }
rbdc-pg = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

derive-new = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

jsonwebtoken = "9.3"
time = "0.3"

api-response = { version = "0.16.0", features = ["lite", "salvo"] }

futures-util = "0.3"

bcrypt = "0.17"
rand = "0.9"

[[bin]]
name = "ims"
path = "im-server/src/main.rs"
