[package]
name = "im-common"
version = "0.1.0"
edition = "2024"

[dependencies]
# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 时间处理
time = { workspace = true }

# 配置管理
figment = { workspace = true }

# 日志
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# 数据库
rbatis = { workspace = true }

# 错误处理
anyhow = { workspace = true }

# 异步运行时
tokio = { workspace = true }