[package]
name = "web-common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }

# 数据库
redis = { workspace = true }
deadpool-redis = { workspace = true }
redis-macros = { workspace = true }

rbs = { workspace = true }
rbatis = { workspace = true }
rbdc-pg = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }


derive-new = { workspace = true }

anyhow = { workspace = true }

md5 = { workspace = true }
time = "0.3"